增加MBTI
