# github.com/reservation/api/reservation_grpc.pb.go
@@ -1,8 +1,4 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
-// versions:
-// - protoc-gen-go-grpc v1.2.0
-// - protoc             v3.4.0
-// source: proto/reservation.proto
 
 package api
 
@@ -15,8 +11,7 @@ import (
 
 // This is a compile-time assertion to ensure that this generated file
 // is compatible with the grpc package it is being compiled against.
-// Requires gRPC-Go v1.32.0 or later.
-const _ = grpc.SupportPackageIsVersion7
+const _ = grpc.SupportPackageIsVersion6
 
 // ReservationServiceClient is the client API for ReservationService service.
 //
@@ -24,9 +19,15 @@ const _ = grpc.SupportPackageIsVersion7
 type ReservationServiceClient interface {
 	// 获取预约系统状态信息.
 	GetSystemInfo(ctx context.Context, in *GetSystemInfoReq, opts ...grpc.CallOption) (*GetSystemInfoResp, error)
+	//用户注册
 	Register(ctx context.Context, in *RegisterReq, opts ...grpc.CallOption) (*RegisterResp, error)
-	Login(ctx context.Context, in *LoginReq, opts ...grpc.CallOption) (*LoginResp, error)
+	//微信登录
+	WXLogin(ctx context.Context, in *WXLoginReq, opts ...grpc.CallOption) (*WXLoginResp, error)
+	//生成MBTI
 	GenerateMBTI(ctx context.Context, in *GenerateMBTIReq, opts ...grpc.CallOption) (*GenerateMBTIResp, error)
+	//查询某人的MBTI结果
+	QueryMBTI(ctx context.Context, in *QueryMBTIReq, opts ...grpc.CallOption) (*QueryMBTIResp, error)
+	//查询订单接口
 	QueryOrderList(ctx context.Context, in *QueryOrderListReq, opts ...grpc.CallOption) (*QueryOrderListResp, error)
 	// 获取全部可参加的活动列表
 	QueryActivityList(ctx context.Context, in *QueryActivityListReq, opts ...grpc.CallOption) (*QueryActivityListResp, error)
@@ -60,9 +61,9 @@ func (c *reservationServiceClient) Register(ctx context.Context, in *RegisterReq
 	return out, nil
 }
 
-func (c *reservationServiceClient) Login(ctx context.Context, in *LoginReq, opts ...grpc.CallOption) (*LoginResp, error) {
-	out := new(LoginResp)
-	err := c.cc.Invoke(ctx, "/reservation.ReservationService/Login", in, out, opts...)
+func (c *reservationServiceClient) WXLogin(ctx context.Context, in *WXLoginReq, opts ...grpc.CallOption) (*WXLoginResp, error) {
+	out := new(WXLoginResp)
+	err := c.cc.Invoke(ctx, "/reservation.ReservationService/WXLogin", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -72,6 +73,15 @@ func (c *reservationServiceClient) Login(ctx context.Context, in *LoginReq, opts
 func (c *reservationServiceClient) GenerateMBTI(ctx context.Context, in *GenerateMBTIReq, opts ...grpc.CallOption) (*GenerateMBTIResp, error) {
 	out := new(GenerateMBTIResp)
 	err := c.cc.Invoke(ctx, "/reservation.ReservationService/GenerateMBTI", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *reservationServiceClient) QueryMBTI(ctx context.Context, in *QueryMBTIReq, opts ...grpc.CallOption) (*QueryMBTIResp, error) {
+	out := new(QueryMBTIResp)
+	err := c.cc.Invoke(ctx, "/reservation.ReservationService/QueryMBTI", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -111,9 +121,15 @@ func (c *reservationServiceClient) QueryActivityListByDay(ctx context.Context, i
 type ReservationServiceServer interface {
 	// 获取预约系统状态信息.
 	GetSystemInfo(context.Context, *GetSystemInfoReq) (*GetSystemInfoResp, error)
+	//用户注册
 	Register(context.Context, *RegisterReq) (*RegisterResp, error)
-	Login(context.Context, *LoginReq) (*LoginResp, error)
+	//微信登录
+	WXLogin(context.Context, *WXLoginReq) (*WXLoginResp, error)
+	//生成MBTI
 	GenerateMBTI(context.Context, *GenerateMBTIReq) (*GenerateMBTIResp, error)
+	//查询某人的MBTI结果
+	QueryMBTI(context.Context, *QueryMBTIReq) (*QueryMBTIResp, error)
+	//查询订单接口
 	QueryOrderList(context.Context, *QueryOrderListReq) (*QueryOrderListResp, error)
 	// 获取全部可参加的活动列表
 	QueryActivityList(context.Context, *QueryActivityListReq) (*QueryActivityListResp, error)
@@ -126,38 +142,34 @@ type ReservationServiceServer interface {
 type UnimplementedReservationServiceServer struct {
 }
 
-func (UnimplementedReservationServiceServer) GetSystemInfo(context.Context, *GetSystemInfoReq) (*GetSystemInfoResp, error) {
+func (*UnimplementedReservationServiceServer) GetSystemInfo(context.Context, *GetSystemInfoReq) (*GetSystemInfoResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetSystemInfo not implemented")
 }
-func (UnimplementedReservationServiceServer) Register(context.Context, *RegisterReq) (*RegisterResp, error) {
+func (*UnimplementedReservationServiceServer) Register(context.Context, *RegisterReq) (*RegisterResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Register not implemented")
 }
-func (UnimplementedReservationServiceServer) Login(context.Context, *LoginReq) (*LoginResp, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method Login not implemented")
+func (*UnimplementedReservationServiceServer) WXLogin(context.Context, *WXLoginReq) (*WXLoginResp, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method WXLogin not implemented")
 }
-func (UnimplementedReservationServiceServer) GenerateMBTI(context.Context, *GenerateMBTIReq) (*GenerateMBTIResp, error) {
+func (*UnimplementedReservationServiceServer) GenerateMBTI(context.Context, *GenerateMBTIReq) (*GenerateMBTIResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GenerateMBTI not implemented")
 }
-func (UnimplementedReservationServiceServer) QueryOrderList(context.Context, *QueryOrderListReq) (*QueryOrderListResp, error) {
+func (*UnimplementedReservationServiceServer) QueryMBTI(context.Context, *QueryMBTIReq) (*QueryMBTIResp, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method QueryMBTI not implemented")
+}
+func (*UnimplementedReservationServiceServer) QueryOrderList(context.Context, *QueryOrderListReq) (*QueryOrderListResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method QueryOrderList not implemented")
 }
-func (UnimplementedReservationServiceServer) QueryActivityList(context.Context, *QueryActivityListReq) (*QueryActivityListResp, error) {
+func (*UnimplementedReservationServiceServer) QueryActivityList(context.Context, *QueryActivityListReq) (*QueryActivityListResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method QueryActivityList not implemented")
 }
-func (UnimplementedReservationServiceServer) QueryActivityListByDay(context.Context, *QueryActivityListByDayReq) (*QueryActivityListByDayResp, error) {
+func (*UnimplementedReservationServiceServer) QueryActivityListByDay(context.Context, *QueryActivityListByDayReq) (*QueryActivityListByDayResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method QueryActivityListByDay not implemented")
 }
-func (UnimplementedReservationServiceServer) mustEmbedUnimplementedReservationServiceServer() {}
+func (*UnimplementedReservationServiceServer) mustEmbedUnimplementedReservationServiceServer() {}
 
-// UnsafeReservationServiceServer may be embedded to opt out of forward compatibility for this service.
-// Use of this interface is not recommended, as added methods to ReservationServiceServer will
-// result in compilation errors.
-type UnsafeReservationServiceServer interface {
-	mustEmbedUnimplementedReservationServiceServer()
-}
-
-func RegisterReservationServiceServer(s grpc.ServiceRegistrar, srv ReservationServiceServer) {
-	s.RegisterService(&ReservationService_ServiceDesc, srv)
+func RegisterReservationServiceServer(s *grpc.Server, srv ReservationServiceServer) {
+	s.RegisterService(&_ReservationService_serviceDesc, srv)
 }
 
 func _ReservationService_GetSystemInfo_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
@@ -196,20 +208,20 @@ func _ReservationService_Register_Handler(srv interface{}, ctx context.Context, 
 	return interceptor(ctx, in, info, handler)
 }
 
-func _ReservationService_Login_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(LoginReq)
+func _ReservationService_WXLogin_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(WXLoginReq)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(ReservationServiceServer).Login(ctx, in)
+		return srv.(ReservationServiceServer).WXLogin(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/reservation.ReservationService/Login",
+		FullMethod: "/reservation.ReservationService/WXLogin",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(ReservationServiceServer).Login(ctx, req.(*LoginReq))
+		return srv.(ReservationServiceServer).WXLogin(ctx, req.(*WXLoginReq))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -228,6 +240,24 @@ func _ReservationService_GenerateMBTI_Handler(srv interface{}, ctx context.Conte
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(ReservationServiceServer).GenerateMBTI(ctx, req.(*GenerateMBTIReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ReservationService_QueryMBTI_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(QueryMBTIReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ReservationServiceServer).QueryMBTI(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/reservation.ReservationService/QueryMBTI",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ReservationServiceServer).QueryMBTI(ctx, req.(*QueryMBTIReq))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -286,10 +316,7 @@ func _ReservationService_QueryActivityListByDay_Handler(srv interface{}, ctx con
 	return interceptor(ctx, in, info, handler)
 }
 
-// ReservationService_ServiceDesc is the grpc.ServiceDesc for ReservationService service.
-// It's only intended for direct use with grpc.RegisterService,
-// and not to be introspected or modified (even as a copy)
-var ReservationService_ServiceDesc = grpc.ServiceDesc{
+var _ReservationService_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "reservation.ReservationService",
 	HandlerType: (*ReservationServiceServer)(nil),
 	Methods: []grpc.MethodDesc{
@@ -302,12 +329,16 @@ var ReservationService_ServiceDesc = grpc.ServiceDesc{
 			Handler:    _ReservationService_Register_Handler,
 		},
 		{
-			MethodName: "Login",
-			Handler:    _ReservationService_Login_Handler,
+			MethodName: "WXLogin",
+			Handler:    _ReservationService_WXLogin_Handler,
 		},
 		{
 			MethodName: "GenerateMBTI",
 			Handler:    _ReservationService_GenerateMBTI_Handler,
+		},
+		{
+			MethodName: "QueryMBTI",
+			Handler:    _ReservationService_QueryMBTI_Handler,
 		},
 		{
 			MethodName: "QueryOrderList",
